--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Koda -->
         <div class="pet-box">
             <h2>Koda</h2>
-            <img src="images/koda.gif" width = "400" alt="Koda says hello" class="main-image">
+            <img src="images/koda.gif" width = "400" alt="Koda says hello" class="main-image motion-gif">
             <p>Meet Koda, a lively 6-year-old German Shepard known for his playful energy and intelligent eyes. With a deep loyalty to his family and an adventurous spirit, Koda's favorite activities include long hikes, playing fetch in the park, and unwinding with his favorite chew toy. Regarded as a beloved family member, he holds a special fondness for cheese treats and belly rubs. Koda's unwavering loyalty, protective nature, and playful demeanor make him an indispensable part of his family's life.</p> 
             <div class="photoGallery">
                 <h3>Photo Gallery</h3>
@@ -52,7 +52,7 @@
         <!-- Rocky -->
         <div class="pet-box">
             <h2>Rocky</h2>
-            <img src="images/rocky.gif" width = "400" alt="Rocky" class="main-image">
+            <img src="images/rocky.gif" width = "400" alt="Rocky" class="main-image motion-gif">
 
             <p>Meet Rocky, a loveable 6-year-old Bernese Mountain Dog. With his lush, tri-colored coat and kind eyes, Rocky's striking appearance is matched only by his gentle and placid nature. Despite his large size, Rocky is known for his easy-going temperament and playful habits which include chasing after squirrels, engaging in catch games with balls and gentle strolls around the university park. Post his fun-filled day, he enjoys sprawled out peaceful naps in the sun and often seen curling up by the fireplace with his favorite squeaky toy. Rocky's calm demeanour combined with his natural charm makes him an irresistible companion in any household.</p>
 
@@ -77,7 +77,7 @@
         <!-- Daisy -->
         <div class="pet-box">
             <h2>Daisy</h2>
-            <img src="images/daisy.gif" width = "400" alt="Daisy" class="main-image">
+            <img src="images/daisy.gif" width = "400" alt="Daisy" class="main-image motion-gif">
 
             <p>Meet Daisy, a lovable 4-year-old Golden Retriever who calls Germany her home. Daisy's world centers around two things: her love for swimming and her soft spot for belly rubs. With an endearing personality and boundless energy, she is often seen frolicking in local streams, giving her plush coat a shiny wet look. Back at home, Daisy's idea of a perfect evening is cuddling up with her family, enjoying her favorite chicken treats, and receiving plenty of strokes on her silky fur. Daisy's affectionate nature and playful charm never fail to spread joy and laughter to those around her.</p>
 
